--- a/src/app/shared/components/guide-profile/guide-profile.component.html
+++ b/src/app/shared/components/guide-profile/guide-profile.component.html
@@ -149,85 +149,6 @@
 
 <!--Modal: Login with Avatar Form-->
 <div mdbModal #personalTour="mdbModal" class="modal fade" id="modalLoginAvatar" tabindex="-1" role="dialog" aria-labelledby="mytourLabel" aria-hidden="true">
-    <div class="modal-dialog cascading-modal modal-avatar " role="document">
-        <!--Content-->
-        <div class="modal-content">
-            <form [formGroup]="personalBooking" (ngSubmit)="submitPersonalBooking()">
-                <!--Header-->
-                <div class="modal-header">
-                    <img src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" style="height:100px; width:100px" alt="avatar" class="rounded-circle img-responsive">
-                </div>
-                <!--Body-->
-                <div class="modal-body text-center mb-1">
-
-                    <h5 class="mt-1 mb-3">Hi! Lets personalize your experience</h5>
-                    <hr mx-3>
-                    <h5 class="text-left black-text">Tell me your preferred Date</h5>
-                    <div class="row form-inline">
-
-                        <div class=" col-md-12 form-group hidden">
-                            <div class="input-group">
-                                <input name="datepicker" class="form-control" ngbDatepicker #datepicker="ngbDatepicker" [autoClose]="'outside'" (dateSelect)="onDateSelection($event)" [displayMonths]="2" [dayTemplate]="t" outsideDays="hidden" [startDate]="fromDate!">
-                                <ng-template #t let-date let-focused="focused">
-                                    <span class="custom-day" [class.focused]="focused" [class.range]="isRange(date)" [class.faded]="isHovered(date) || isInside(date)" (mouseenter)="hoveredDate = date" (mouseleave)="hoveredDate = null">
-                              {{ date.day }}
-                            </span>
-                                </ng-template>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="input-group">
-                                <input #dpFromDate class="form-control" placeholder="yyyy-mm-dd" name="dpFromDate" formControlName="startDate" [value]="formatter.format(fromDate)" (input)="fromDate = validateInput(fromDate, dpFromDate.value)">
-                                <div class="input-group-append">
-                                    <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button"></button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="input-group">
-                                <input #dpToDate class="form-control" placeholder="yyyy-mm-dd" name="dpToDate" formControlName="endDate" [value]="formatter.format(toDate)" (input)="toDate = validateInput(toDate, dpToDate.value)">
-                                <div class="input-group-append">
-                                    <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button"></button>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                    <!--  -->
-                    <div class="font-small text-left mt-0">You can opt for a single day tour as well as multiple days' tours.</div>
-                    <h5 class="text-left black-text mt-2">So how many Travellers are you?</h5>
-                    <div class="row">
-                        <div class="col">
-                            <div class="form-group">
-                                <select formControlName="groupType" class="form-control">
-                                <option value="" disabled>Select Group type</option>
-                                <option *ngFor="let item of groupTypesList" [value]="item">{{item}}</option>
-                            </select>
-                            </div>
-
-                            <!-- <input type="number" mdbInput class="form-control" placeholder="Adults"> -->
-                        </div>
-                        <div class="col">
-                            <div class="form-group">
-                                <input type="number" formControlName="noOfPeople" class="form-control" placeholder="no of people">
-                            </div>
-                        </div>
-                    </div>
-
-
-                    <!-- <div class="md-form ml-0 mr-0">
-                    <input type="password" type="text" id="form29" class="form-control form-control-sm validate ml-0">
-                    <label data-error="wrong" data-success="right" for="form29" class="ml-0">Enter password</label>
-                </div> -->
-
-                    <div class="text-center mt-4">
-                        <button type="submit" class="btn btn-cyan mt-1">Request a personalized Tour</button>
-                    </div>
-                </div>
-            </form>
-
-        </div>
-        <!--/.Content-->
-    </div>
+    <app-personal-modal></app-personal-modal>
 </div>
 <!--Modal: Login with Avatar Form-->
