--- a/src/app/modules/tourists/components/guides-list/guides-list.component.html
+++ b/src/app/modules/tourists/components/guides-list/guides-list.component.html
@@ -274,7 +274,7 @@
                 <div style="position:absolute; bottom:6px; right:10px;" class="float-right">
                     <div class="text-center">₹{{guide.perHeadCharge}}/head/day</div>
 
-                    <button type="button" (click)="openModal(personalTour)" style=" border: 1px solid black; font-size: 15px;" class="white black-text my-2" mdbWavesEffect>BOOK NOW!</button>
+                    <button type="button" (click)="openModal(personalTour, guide)" style=" border: 1px solid black; font-size: 15px;" class="white black-text my-2" mdbWavesEffect>BOOK NOW!</button>
 
                 </div>
             </div>
