--- a/src/app/shared/components/about/about.component.html
+++ b/src/app/shared/components/about/about.component.html
@@ -20,6 +20,21 @@
         optio vero odio nam sit officia accusamus minus error nisi architecto nulla ipsum dignissimos. Odit sed qui,
         dolorum!
       </p>
+      <div class="container">
+      <div class="eachAvatar">
+        <img src="https://codepen-chriscoyier-bucket.imgix.net/1.png" alt="Avatar for user 1" />
+        <p>Connie C. Jett</p>
+        <div class="socialLinks">
+          <ul>
+            <li><a href="#">
+                <img src="https://i.postimg.cc/05dqfdT2/instagram.png" alt="instagram">
+              </a></li>
+            <li><a href="#"><img src="https://i.postimg.cc/RCjvsZFX/facebook.png" alt="facebook"></a></li>
+            <li><a href="#"><img src="https://i.postimg.cc/FHvNvC0S/twitter.png" alt="twitter"></a></li>
+            <li><a href="#"><img src="https://i.postimg.cc/ncBp6f9Z/linkedin.png" alt="linkedin"></a></li>
+          </ul>
+        </div>
+      </div></div>
     </div>
   </div>
 </mdb-card>
