--- a/src/app/modules/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/pages/dashboard/dashboard.component.html
@@ -1,3 +1,71 @@
-<p>
-  dashboard works!
-</p>
+<div class="container-fluid">
+
+  <!--  -->
+  <div class="d-none d-md-block">
+  <div class="row mt-3">
+    <div class="col-12 text-center">
+      <div class="card first" style="z-index: -1; width: 90%; margin-left: 5%;">
+        <h5 class="text-center white-text py-2 my-0">Admin Dashboard</h5>
+      </div>
+    </div>
+  </div>
+  <div class="card mb-5" style="margin-top: -25px; z-index: -2;">
+    <div class="card-body">
+      <div class="mt-3 mb-3">
+        <div class="table-responsive">
+          <table class="table table-hover">
+            <thead >
+              <tr>
+                <th scope="col">Sr no.</th>
+                <th scope="col">Name</th>
+                <th scope="col">Applied Date</th>
+                <th scope="col">State</th>
+                <th scope="col">Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+
+                <td>1</td>
+                <td>fdf</td>
+                <td>rg</td>
+                <td>e days</td>
+                <td>
+                  <button class="btn" color="info" style="margin: auto;" mdbBtn type="button" size="sm" mdbWavesEffect>
+                    <b>VIEW</b>
+                  </button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="d-block bag  d-md-none mt-4">
+  <mdb-card class="mb-4">
+    <mdb-card-body>
+      <mdb-card-title>
+        <h4>Name</h4>
+      </mdb-card-title>
+      <mdb-card-text >
+        <div class="row">
+          <div class="col-4">
+          <div><b>Applied-Date</b></div>
+          <div>fdfd</div>
+        </div>
+        <div class="col-4">
+          <div><b>State</b></div>
+          <div>ee days</div>
+        </div>
+
+        </div>
+      </mdb-card-text>
+      <a size="sm" class="float-right" mdbBtn style="background: #0ec8b9;" mdbWavesEffect>VIEW</a>
+    </mdb-card-body>
+  </mdb-card>
+</div>
+
+</div>
