--- a/src/app/shared/components/deals-cards/deals-cards.component.html
+++ b/src/app/shared/components/deals-cards/deals-cards.component.html
@@ -1,62 +1,22 @@
-<!-- <div class="row">
-    <div class="col-12 col-sm-6 col-md-4" *ngFor="let deal of dealsList">
-        <mdb-card>
-            <div class="img-fav">
-                <i *ngIf="!deal.isFavourite" (click)="addToFavourite(deal)" class="far fa-heart fa-lg pink-text"></i>
-                <i *ngIf="deal.isFavourite" (click)="removeFromFavourite(deal)" class="fas fa-heart fa-lg pink-text"></i>
-                Card image
-                <mdb-card-img class="main-img" src="https://images.thrillophilia.com/image/upload/s--8pyG_oK_--/c_fill,dpr_1.0,f_auto,fl_strip_profile,g_center,h_450,q_auto,w_753/v1/images/photos/000/113/476/original/1501063349_Pune_Palace.jpg.jpg" alt="Card image cap"></mdb-card-img>
-                <img class="card-img rounded-circle" src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" style="width:70px; height:70px; border:white 3px solid;" alt="Card image cap">
-                <h5><span class="badge badge-default font-weight-normal">{{deal.city}} tour with Barkha Joshi</span></h5>
-            </div>
-            Card content
-            <mdb-card-body>
-                Title
-                <mdb-card-title>
-                    <h5><strong>{{deal.places[0]}} Tour</strong></h5>
-                </mdb-card-title>
-
-                Text
-                <mdb-card-text>
-                    <div>{{deal.places.toString()}}.</div>
-                    <div>&#x20b9;{{deal.price}} pp &#8226; From {{deal.startDate | date: 'dd-MM-yy'}} &#8226; To {{deal.endDate | date: 'dd-MM-yy'}}</div>
-                </mdb-card-text>
-
-              
-                <div class="float-right">
-                    <button mdbBtn type="button" (click)="openModal1(dealTour, deal)" class="font-weight-bold" mdbWavesEffect>Book Deal</button>
-                </div>
-            </mdb-card-body>
-        </mdb-card>
-    </div>
-</div> -->
-<!-- Responsive deal cards -->
-
 <div class="row mx-lg-2 mx-2">
     <div class="col-12 col-sm-6 col-md-5 col-lg-5 py-2 mb-4" *ngFor="let deal of dealsList" >
         <mdb-card>
             <div class="img-fav">
                 <i *ngIf="!isFavourite(deal) && role !== 'guide'" (click)="addToFavourite(deal)" class="far fa-heart fa-lg pink-text"></i>
                 <i *ngIf="isFavourite(deal) && role !== 'guide'" (click)="removeFromFavourite(deal)" class="fas fa-heart fa-lg pink-text"></i>
-
                 <mdb-card-img class="main-img" 
                 src="https://images.pexels.com/photos/3974152/pexels-photo-3974152.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
                 </mdb-card-img>
                 <img class="card-img rounded-circle" 
                 src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" 
                 style="width:70px; height:70px; border:white 3px solid;" alt="">
-                <h5><span class="badge badge-default font-weight-normal">{{deal.state | titlecase}} tour</span></h5>
+                <h5><span class="badge badge-default font-weight-normal">With {{deal.guideId.name | titlecase}}</span></h5>
             </div>
-            <!-- Card content -->
             <div class="mt-3 mb-3 mx-3">
-                <!-- Title -->
                 <mdb-card-title class="mt-1">
-                    <h5><strong>{{deal.city | titlecase}}</strong></h5>
+                    <h5><strong>{{deal.city | titlecase}}, {{deal.state | titlecase}}</strong></h5>
                 </mdb-card-title>
-
-                <!-- Text -->
                 <div>
-                    <!-- <div>Awadhnagar, Ranibaag, local delicacies</div> -->
                     <div><i class="fa fa-star star pink-text" aria-hidden="true" style=" display:inline-block;
                         vertical-align: 3px;"></i> &nbsp;4.0&nbsp;(12) &#8226; From {{deal.startDate | date: 'MMM dd, y'}} | {{deal.endDate | date: 'MMM dd, y'}}</div>
                 </div>
@@ -64,8 +24,6 @@
                     <i>User</i><b>{{deal.peopleLimit}}</b>
                     <i>Left</i><b>{{deal.peopleLeft}}</b>
                 </div>
-
-
                 <div class="mt-2">
                     <div class="float-left">
                         <h4 class="mb-0">₹ {{deal.price}}</h4>
@@ -76,7 +34,6 @@
             </div>
         </mdb-card>
     </div>
-
 </div>
 
 
