--- a/src/app/shared/components/help-page/help-page.component.html
+++ b/src/app/shared/components/help-page/help-page.component.html
@@ -20,6 +20,7 @@
             <span>Help</span>
           </div>
           <div class="app-contact">CONTACT INFO : voila@gmail.com</div>
+          <div [routerLink]="['/admin/login']" style="font-size: 12px; color: #888;">ADMIN</div>
         </div>
         <div class="screen-body-item">
           <div class="app-form">
