--- a/src/app/modules/admin/pages/dashboard/dashboard.component.html
+++ b/src/app/modules/admin/pages/dashboard/dashboard.component.html
@@ -1,7 +1,6 @@
 <div class="container-fluid">
-
   <!--  -->
-  <div class="d-none d-md-block">
+<div class="d-none d-sm-block">
   <div class="row mt-3">
     <div class="col-12 text-center">
       <div class="card first" style="z-index: -1; width: 90%; margin-left: 5%;">
@@ -24,14 +23,13 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
-
-                <td>1</td>
+              <tr *ngFor="let guide of guideList; let i = index">
+                <td>{{i+1}}</td>
                 <td>fdf</td>
                 <td>rg</td>
                 <td>e days</td>
                 <td>
-                  <button class="btn" color="info" style="margin: auto;" mdbBtn type="button" size="sm" mdbWavesEffect>
+                  <button [routerLink]="['/navigateToGuideProfile', guide?._id]" class="btn" color="info" style="margin: auto;" mdbBtn type="button" size="sm" mdbWavesEffect>
                     <b>VIEW</b>
                   </button>
                 </td>
@@ -44,28 +42,32 @@
   </div>
 </div>
 
-<div class="d-block bag  d-md-none mt-4">
-  <mdb-card class="mb-4">
+<div class="d-block bag  d-sm-none mt-4">
+  <mdb-card class="mb-4" *ngFor="let guide of guideList; let i = index">
     <mdb-card-body>
       <mdb-card-title>
         <h4>Name</h4>
       </mdb-card-title>
       <mdb-card-text >
         <div class="row">
-          <div class="col-4">
+          <div class="col-6 col-sm-4 mb-2">
           <div><b>Applied-Date</b></div>
           <div>fdfd</div>
         </div>
-        <div class="col-4">
+        <div class="col-6 col-sm-4mb-2">
           <div><b>State</b></div>
-          <div>ee days</div>
+          <div>Delhi</div>
         </div>
-
+        <div class="col-6 col-sm-4">
+          <div><b>Contact No.</b></div>
+          <div>213214324</div>
+        </div>
+        <div class="col-6 col-sm-4">
+          <a [routerLink]="['/navigateToGuideProfile', guide?._id]" size="sm" class="btn mx-0" mdbBtn style="background: #0ec8b9;" mdbWavesEffect>VIEW</a>
+        </div>
         </div>
       </mdb-card-text>
-      <a size="sm" class="float-right" mdbBtn style="background: #0ec8b9;" mdbWavesEffect>VIEW</a>
     </mdb-card-body>
   </mdb-card>
 </div>
-
 </div>
