--- a/src/app/modules/admin/pages/login-page/login-page.component.scss
+++ b/src/app/modules/admin/pages/login-page/login-page.component.scss
@@ -3,6 +3,7 @@
 	border-radius: 20px;
 	box-shadow: 0 5px 5px rgba(0,0,0,.4);
 	margin: 5em auto;
+	margin-top: 2em;
 	display: flex;
 }
 .company__info{
@@ -13,6 +14,17 @@
 	flex-direction: column;
 	justify-content: center;
 	color: #fff;
+}
+@media(max-width: 640px) {
+	.main-content{
+		margin: 5em auto;
+	}
+}
+
+@media(min-width: 767px) {
+	.main-content{
+		margin: 5em auto;
+	}
 }
 
 @media screen and (max-width: 640px) {
@@ -47,9 +59,9 @@ form{
 	border-radius: 0;
 	border-bottom: 1px solid #aaa;
 	padding: 1em .5em .5em;
-	padding-left: 2em;
+	// padding-left: 2em;
 	outline:none;
-	margin:1.5em auto;
+	margin:0.8em auto;
 	transition: all .5s ease;
 }
 .form__input:focus{
